clusters/vollminlab-cluster/ci/jenkins-operator/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: ci
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.vollminlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-operator-http-jenkins
            port:
              number: 8080
  tls:
  - hosts:
    - jenkins.vollminlab.com
    secretName: wildcard-tls
